{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 100,
  "lineage": "5c270dd2-d033-c3bf-1d9e-aaf1d336c4c9",
  "resources": [
    {
      "module": "module.jenkins-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092efbcc9a2d2be8a",
            "arn": "arn:aws:ec2:us-west-1:481792101255:instance/i-02134b22e03b6ed38",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02134b22e03b6ed38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "stage-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aa1ccbbe2076dc8",
            "private_dns": "ip-192-100-0-233.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.100.0.233",
            "public_dns": "ec2-52-53-254-57.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.254.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0417d609b84b57eff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01e0ee51d644af8af",
              "sg-0bd263099e1a30c0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0869144b29b3b4868",
            "tags": {
              "Name": "stage-Jenkins-Server-devOps"
            },
            "tags_all": {
              "Name": "stage-Jenkins-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e0ee51d644af8af",
              "sg-0bd263099e1a30c0b"
            ]
          },
          "dependencies": [
            "module.jenkins-server.data.aws_ami.ubuntu-linux-1404",
            "module.jenkins-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_8080",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.k8-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092efbcc9a2d2be8a",
            "arn": "arn:aws:ec2:us-west-1:481792101255:instance/i-048903921b9ae11e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048903921b9ae11e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "stage-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-078457b1d54d3ecf3",
            "private_dns": "ip-192-100-0-129.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.100.0.129",
            "public_dns": "ec2-54-177-62-116.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.62.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0967f7febf670ff98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06ed5f7f45a32808d",
              "sg-0bd263099e1a30c0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0869144b29b3b4868",
            "tags": {
              "Name": "stage-k8-Server-devOps"
            },
            "tags_all": {
              "Name": "stage-k8-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ed5f7f45a32808d",
              "sg-0bd263099e1a30c0b"
            ]
          },
          "dependencies": [
            "module.k8-server.data.aws_ami.ubuntu-linux-1404",
            "module.k8-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_30000",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:security-group/sg-0bd263099e1a30c0b",
            "description": "enable ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd263099e1a30c0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-devOps-security_group_port_22"
            },
            "tags_all": {
              "Name": "stage-devOps-security_group_port_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_30000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:security-group/sg-06ed5f7f45a32808d",
            "description": "enable port access 30000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed5f7f45a32808d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 30000 access",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "K8 server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-devOps-security_group_port_30000"
            },
            "tags_all": {
              "Name": "stage-devOps-security_group_port_30000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:security-group/sg-01e0ee51d644af8af",
            "description": "enable port access 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e0ee51d644af8af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 8080 access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins server security group with port 8080",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-devOps-security_group_port_8080"
            },
            "tags_all": {
              "Name": "stage-devOps-security_group_port_8080"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_9000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:security-group/sg-0093f5466e4f055f9",
            "description": "enable PORT 9000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0093f5466e4f055f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 9000 access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-devOps-security_group_port_9000"
            },
            "tags_all": {
              "Name": "stage-devOps-security_group_port_9000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092efbcc9a2d2be8a",
            "arn": "arn:aws:ec2:us-west-1:481792101255:instance/i-05c44e3725c69353f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c44e3725c69353f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "stage-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004492f6a2b0c9e36",
            "private_dns": "ip-192-100-0-167.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.100.0.167",
            "public_dns": "ec2-54-153-14-239.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.14.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0049dc34503d84330",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0093f5466e4f055f9",
              "sg-0bd263099e1a30c0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0869144b29b3b4868",
            "tags": {
              "Name": "stage-Sonarqube-Server-devOps"
            },
            "tags_all": {
              "Name": "stage-Sonarqube-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0093f5466e4f055f9",
              "sg-0bd263099e1a30c0b"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_9000",
            "module.sonarqube-server.data.aws_ami.ubuntu-linux-1404",
            "module.sonarqube-server.data.template_file.user_data",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:internet-gateway/igw-0b5e1e2bd90e71ec5",
            "id": "igw-0b5e1e2bd90e71ec5",
            "owner_id": "481792101255",
            "tags": {
              "Name": "stage-devOps-igw"
            },
            "tags_all": {
              "Name": "stage-devOps-igw"
            },
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:route-table/rtb-0383c617bd9a59e72",
            "id": "rtb-0383c617bd9a59e72",
            "owner_id": "481792101255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5e1e2bd90e71ec5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-devOps-Public Route Table"
            },
            "tags_all": {
              "Name": "stage-devOps-Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014e5310f85d89c7d",
            "route_table_id": "rtb-0383c617bd9a59e72",
            "subnet_id": "subnet-0869144b29b3b4868"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:subnet/subnet-0869144b29b3b4868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0869144b29b3b4868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481792101255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-devOps-Public Subnet"
            },
            "tags_all": {
              "Name": "stage-devOps-Public Subnet"
            },
            "vpc_id": "vpc-0e402e2aa2d5beb19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481792101255:vpc/vpc-0e402e2aa2d5beb19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.100.0.0/16",
            "default_network_acl_id": "acl-071ea22cbea481d5b",
            "default_route_table_id": "rtb-0d4535aa63fbeb76f",
            "default_security_group_id": "sg-033cb96ea0f7c5edc",
            "dhcp_options_id": "dopt-06ccac8c097008f72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e402e2aa2d5beb19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4535aa63fbeb76f",
            "owner_id": "481792101255",
            "tags": {
              "Name": "stage-devOps-vpc"
            },
            "tags_all": {
              "Name": "stage-devOps-vpc"
            }
          }
        }
      ]
    }
  ]
}